--- a/maltrail.conf
+++ b/maltrail.conf
@@ -44,6 +44,7 @@ CUSTOM_TRAILS_DIR ./trails/custom
 
 # Use heuristic methods too (introducing potential false positives)
 USE_HEURISTICS true
+USE_HEURISTICS_UA true
 
 # (Max.) size of multiprocessing network capture ring buffer (in bytes or percentage of total physical memory) used by sensor (e.g. 536870912)
 CAPTURE_BUFFER 20%
